--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <span class="small">by <a href="https://github.com/gwtbootstrap">gwtbootstrap</a></span></h1>
 
     <div class="description">
-      gwt-bootstrap maven repository
+      gwt-bootstrap maven repository update test
     </div>
 
     
